@@ -637,6 +637,13 @@ test parseExpr-18.1 {LogSyntaxError procedure, error in expr longer than 60 char
     list [catch {testexprparser {(+0123456)*(+0123456)*(+0123456)*(+0123456)*(+0123456)*(+0123456)*(+0123456)/} -1} msg] $msg
 } {1 {syntax error in expression "(+0123456)*(+0123456)*(+0123456)*(+0123456)*(+0123456)*(+012...": premature end of expression}}
 
+test parseExpr-19.1 {TclParseInteger: [Bug 648441]} {
+    # Should see this as integer "0" followed by incomplete function "x"
+    # Thus, syntax error.
+    # If Bug 648441 is not fixed, "0x" will be seen as floating point 0.0
+    list [catch {expr 0x} result] $result
+} [list 1 {syntax error in expression "0x": extra tokens at end of expression}]
+
 # cleanup
 ::tcltest::cleanupTests
 return
