@@ -1,3 +1,9 @@
+2002-12-11  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclParseExpr.c (TclParseInteger):  Return 1 for the
+	string "0x" (recognize leading "0" as an integer).  [Bug 648441].
+	* tests/parseExpr.test (parseExpr-19.1): Test for Bug 648441.
+
 2002-12-09  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tclWinThrd.c (TclpMasterUnlock):
